# PrismLLM

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
prismllm/: __init__.py  cli.py
prismllm/utils/: config.py  logger.py
tests/e2e/: test_installation.py
tests/unit/: test_cli.py  test_config.py
